@startuml
interface IStartAzureSession {
    invoke() : Task
}
interface IAnchorRemover {
    + deleteNativeAnchor(anchorGameObject:GameObject) : void
    + deleteCloudAnchor(indetifier:string) : Task
}
class AzureCloudManager {
    {static} ANCHOR_TYPE_PROP : string = "ANCHOR_TYPE"
    {static} ANCHOR_SCALE_X : string = "ANCHOR_SCALE_X"
    {static} ANCHOR_SCALE_Y : string = "ANCHOR_SCALE_Y"
    {static} ANCHOR_SCALE_Z : string = "ANCHOR_SCALE_Z"
    + AzureCloudManager(cloudManager:SpatialAnchorManager)
    + <<async>> createCloudAnchor(gameObject:GameObject, propIndex:int) : Task<IAnchorCreator.Result>
    + createNativeAnchor(gameObject:GameObject) : void
    + <<async>> invoke() : Task
    + deleteNativeAnchor(anchorGameObject:GameObject) : void
    + <<async>> deleteCloudAnchor(indetifier:string) : Task
}
IAnchorCreator <|-- AzureCloudManager
IAnchorRemover <|-- AzureCloudManager
IStartAzureSession <|-- AzureCloudManager
AzureCloudManager --> "_cloudManager" SpatialAnchorManager
@enduml
